Fix margin on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ section.quote i {
   background: url("../img/Logo.png") no-repeat center / contain;
   margin: 50px auto;
 }
+
 .jumbotron h1 {
   font-size: 2em;
   text-transform: uppercase;
@@ -126,6 +127,13 @@ section.quote i {
   padding-left: 0.5em;
   margin-bottom: 70px;
 }
+
+@media (max-width: 768px) {
+  .jumbotron h1 {
+    margin-bottom: 10px !important;
+  }
+}
+
 .jumbotron .btn {
   background: none;
   border: 4px solid;
